# Protlin

./: .gitignore  .npmignore  .vscodeignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  HELLO.md  LICENSE  README.md  index.js  language-configuration.json  package.json  protlin-language-support-1.0.0.vsix  protlin.scroll
4protlin/: Cargo.toml
4protlin/src/: main.rs
docs/: GETTING_STARTED.md
examples/: graphics_demo.prot  hello.prot  theme_demo.prot
protlintj/: CMakeLists.txt  Makefile  README.md  demo.html  index.html  script.js  styles.css
protlintj/resources/: protlintj.desktop
protlintj/src/: editor.cpp  editor.h  file_manager.h  ide.cpp  ide.h  main.cpp  output_panel.h  protlin_highlighter.h  theme_manager.cpp  theme_manager.h
scripts/: build.js  install.js  postinstall.js  test.js
sdk/: Cargo.toml
sdk/src/: main.rs
src/: ast.rs  builtins.rs  environment.rs  error.rs  graphics.rs  interpreter.rs  lexer.rs  main.rs  parser.rs  types.rs
syntaxes/: protlin.tmLanguage.json
