[package]
name = "forprotlin"
version = "1.0.0"
edition = "2021"
authors = ["Moude AI LLC and Moude Corp"]
description = "4protlin - Package installer for Protlin Programming Language"
license = "Proprietary"

[[bin]]
name = "4protlin"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
tar = "0.4"
flate2 = "1.0"
indicatif = "0.17"
chrono = "0.4"
