[package]
name = "protlin-sdk"
version = "1.0.0"
edition = "2021"
authors = ["Moude AI LLC and Moude Corp"]
description = "Protlin SDK - Lightweight client for Protlin Programming Language"
license = "Proprietary"

[[bin]]
name = "protlin"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
